# jsoncpp_dto_from_schema

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  main.cpp
jsoncpp_support/: jsoncpp_support.hpp
schemas/: product.json.schema  product.nested.json.schema  product.tags.json.schema
swig/: .gitignore  CMakeLists.txt  launcher.sh  product.i
templates/: class.hpp.template
test/: CMakeLists.txt  main.cpp
